Sutter Health/src/objects/Candidate_Import_Error__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Company_Domain__c</fullName>
        <label>Current Company Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <label>Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Details__c</fullName>
        <label>Education Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Encountered__c</fullName>
        <label>Error Encountered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IM__c</fullName>
        <label>IM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Id__c</fullName>
        <label>LinkedIn Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <label>Owner_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persons_In_Common__c</fullName>
        <label>Persons In Common</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previous_Companies__c</fullName>
        <label>Previous Companies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Connections__c</fullName>
        <label># of Connections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Candidate Import Error</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Candidate Import Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Import Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>